[new]字典添加
